--- a/collection.html
+++ b/collection.html
@@ -11,7 +11,7 @@
     <title>Harry Potter | Collection</title>
 </head>
 <body>
-    <!-- ICI ON VA METTRE NOS CARTES AVEC LA TABULATION, IL Y A TOUT LES PERSONNAGES POUR CE COURS MAIS CE SERA CHANGE-->
+    <!-- ICI ON VA METTRE NOS CARTES AVEC LA TABULATION-->
     <header>
         <img src="assets/img/Logo_Harry_Potter.png" alt="Logo Harry Potter" class="logo">
         <nav class="header">
