--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
         <!-- ICI ON METTRA NOTRE COMPOSANT POUR OUVRIR NOTRE BOOSTER -->
         <div class="booster-container"></div>
         <h1>Liste de toutes les carte :</h1>
-        <!-- ICI ON METTRA LA TABULATION FILTRÉE, TOUT LES PERSONNAGES SERONT AFFICHES ICI MAIS SONT POUR CE COURS DANS MA COLLECTION -->
+        <!-- ICI ON METTRA LA TABULATION FILTRÉE -->
         <div class="list-container"></div>
     </main>
     <footer></footer>
